device.ja.yml作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
     <% if user_signed_in? %>
-      <%= link_to "投稿", students_path %>
+      <%= link_to "登録生徒", students_path %>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "新規登録", new_user_registration_path %>
@@ -23,7 +23,7 @@
     <% if alert %>
       <p class="alert alert-error"><%= alert %></p>
     <% end %>
-      
+
     <%= yield %>
   </body>
 </html>
