--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -10,7 +10,7 @@
       <th>Birthday</th>
       <th>Telephone</th>
       <th>Cellphone</th>
-      <th>Adress</th>
+      <th>Address</th>
       <th>Parents furigana</th>
       <th>Parents name</th>
       <th>Relationship</th>
@@ -28,7 +28,7 @@
         <td><%= student.birthday %></td>
         <td><%= student.telephone %></td>
         <td><%= student.cellphone %></td>
-        <td><%= student.adress %></td>
+        <td><%= student.address %></td>
         <td><%= student.parents_furigana %></td>
         <td><%= student.parents_name %></td>
         <td><%= student.relationship %></td>
