--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,7 +1,3 @@
-<p>
-  <strong>Update date:</strong>
-  <%= @student.update_date %>
-</p>
 
 <p>
   <strong>Student furigana:</strong>
@@ -31,6 +27,11 @@
 <p>
   <strong>Cellphone:</strong>
   <%= @student.cellphone %>
+</p>
+
+<p>
+  <strong>Post code:</strong>
+  <%= @student.post_code %>
 </p>
 
 <p>
