ストロングパラメータに郵便番号を追加

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -28,17 +28,17 @@
 
   <div class="field">
     <%= form.label :birthday %>
-    <%= form.date_select :birthday %>
+    <%= form.text_field :birthday %>
   </div>
 
   <div class="field">
     <%= form.label :telephone %>
-    <%= form.number_field :telephone %>
+    <%= form.text_field :telephone %>
   </div>
 
   <div class="field">
     <%= form.label :cellphone %>
-    <%= form.number_field :cellphone %>
+    <%= form.text_field :cellphone %>
   </div>
 
   <div class="field">
