student一部ページで国際化できてない

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>Student furigana</th>
+      <th><%= t(".Student_furigana") %></th>
       <th>Student name</th>
       <th>Sex</th>
       <th>Birthday</th>
