--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,17 +3,17 @@
 <table>
   <thead>
     <tr>
-      <th><%= t(".Student_furigana") %></th>
-      <th>Student name</th>
-      <th>Sex</th>
-      <th>Birthday</th>
-      <th>Telephone</th>
-      <th>Cellphone</th>
-      <th>Post code</th>
-      <th>Address</th>
-      <th>Parents furigana</th>
-      <th>Parents name</th>
-      <th>Relationship</th>
+      <th>生徒名（ふりがな）</th>
+      <th>生徒名（漢字）</th>
+      <th>性別</th>
+      <th>生年月日</th>
+      <th>（自宅）電話番号</th>
+      <th>（携帯）電話番号</th>
+      <th>郵便番号</th>
+      <th>現住所</th>
+      <th>保護者名（ふりがな）</th>
+      <th>保護者名（漢字）</th>
+      <th>続柄</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -32,9 +32,9 @@
         <td><%= student.parents_furigana %></td>
         <td><%= student.parents_name %></td>
         <td><%= student.relationship %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', student %></td>
+        <td><%= link_to '編集', edit_student_path(student) %></td>
+        <td><%= link_to '削除', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -42,4 +42,4 @@
 
 <br>
 
-<%= link_to 'New Student', new_student_path %>
+<%= link_to '新規生徒登録', new_student_path %>
