--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,17 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>生徒名（ふりがな）</th>
-      <th>生徒名（漢字）</th>
-      <th>性別</th>
-      <th>生年月日</th>
-      <th>（自宅）電話番号</th>
-      <th>（携帯）電話番号</th>
-      <th>郵便番号</th>
-      <th>現住所</th>
-      <th>保護者名（ふりがな）</th>
-      <th>保護者名（漢字）</th>
-      <th>続柄</th>
+      <th>生徒名</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,17 +11,8 @@
   <tbody>
     <% @students.each do |student| %>
       <tr>
-        <td><%= student.student_furigana %></td>
+
         <td><%= student.student_name %></td>
-        <td><%= student.sex %></td>
-        <td><%= student.birthday %></td>
-        <td><%= student.telephone %></td>
-        <td><%= student.cellphone %></td>
-        <td><%= student.post_code %></td>
-        <td><%= student.address %></td>
-        <td><%= student.parents_furigana %></td>
-        <td><%= student.parents_name %></td>
-        <td><%= student.relationship %></td>
         <td><%= link_to '詳細', student %></td>
         <td><%= link_to '編集', edit_student_path(student) %></td>
         <td><%= link_to '削除', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -41,5 +22,5 @@
 </table>
 
 <br>
-
+<%= link_to 'マイページ', mypage_students_path %>
 <%= link_to '新規生徒登録', new_student_path %>
