--- a/app/views/students/mypage.html.erb
+++ b/app/views/students/mypage.html.erb
@@ -5,6 +5,7 @@
   <td><%= student.student_name %></td>
     <td><%= link_to '基本情報', student %></td>
     <td><%= link_to '家庭環境調査', family_environments_path %></td>
+     <td><%= link_to '緊急連絡先', emergency_contacts_path %></td>
   </tr>
 </table>
 <% end %>
