studentのviewに性別ラジオボタンを作成

--- a/app/views/emergency_contacts/_form.html.erb
+++ b/app/views/emergency_contacts/_form.html.erb
@@ -11,6 +11,9 @@
     </div>
   <% end %>
 
+  <% n = 0 %>
+    <%= form.fields_for :emergency_contacts do |form|%>
+    <h4>緊急連絡先<%= n+=1 %></h4>
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
@@ -35,7 +38,7 @@
     <%= form.label :student_id %>
     <%= form.text_field :student_id %>
   </div>
-
+  <% end %>
   <div class="actions">
     <%= form.submit %>
   </div>
