--- a/app/views/students/mypage.html.erb
+++ b/app/views/students/mypage.html.erb
@@ -4,8 +4,11 @@
   <tr>
   <td><%= student.student_name %></td>
     <td><%= link_to '基本情報', student %></td>
-    <td><%= link_to '家庭環境調査', family_environments_path %></td>
-     <td><%= link_to '緊急連絡先', emergency_contacts_path %></td>
+    <td><%= link_to '家庭環境調査', family_environment_path(current_user.id) %></td>
+     <td><%= link_to '緊急連絡先', emergency_contacts_path(current_user.id) %></td>
   </tr>
 </table>
 <% end %>
+<br>
+<br>
+<%= link_to '新規生徒登録', new_student_path %>
