--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -22,10 +22,10 @@
   </div>
 
   <div class="field">
-    <%= form.radio_button :sex, :male %>
-   <%= form.label :sex, "男性", {value: :male, style: "display: inline-block;"} %>
-   <%= form.radio_button :sex, :female %>
-   <%= form.label :sex, "女性", {value: :female, style: "display: inline-block;"} %>
+    <%= form.radio_button :sex, :男 %>
+   <%= form.label :sex, "男", {value: :男, style: "display: inline-block;"} %>
+   <%= form.radio_button :sex, :女 %>
+   <%= form.label :sex, "女", {value: :女, style: "display: inline-block;"} %>
   </div>
 
   <div class="field">
