各テーブルの編集、詳細ページにマイページへのリンクを設定

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the top controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+// .background {
+//   background-image: image-url('new_haikei.png');
+// }
+// .background{
+//  background-image: url("<%= asset_path('new_haikei.jpg') %>")
+// }
+// .background: url("../new_haikei.jpg");
