--- a/app/views/emergency_contacts/show.html.erb
+++ b/app/views/emergency_contacts/show.html.erb
@@ -26,4 +26,4 @@
 </p>
 
 <%= link_to 'Edit', edit_emergency_contact_path(@emergency_contact) %> |
-<%= link_to 'Back', emergency_contacts_path %>
+<%= link_to 'マイページ', mypage_students_path %>
