--- a/app/views/family_environments/edit.html.erb
+++ b/app/views/family_environments/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', family_environment: @family_environment %>
 
 <%= link_to 'Show', @family_environment %> |
-<%= link_to 'Back', family_environments_path %>
+<%= link_to 'マイページ', mypage_students_path %>
