--- a/app/views/family_environments/show.html.erb
+++ b/app/views/family_environments/show.html.erb
@@ -24,4 +24,4 @@
 </p>
 
 <%= link_to 'Edit', edit_family_environment_path(@family_environment) %> |
-<%= link_to 'Back', family_environments_path %>
+<%= link_to 'マイページ', mypage_students_path %>
