--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -55,4 +55,4 @@
 </p>
 
 <%= link_to 'Edit', edit_student_path(@student) %> |
-<%= link_to 'Back', students_path %>
+<%= link_to 'マイページ', mypage_students_path %>
