studentに紐づくfamily_enviromentsとして登録できるように修正

--- a/app/views/family_environments/edit.html.erb
+++ b/app/views/family_environments/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', family_environment: @family_environment %>
 
-<%= link_to 'Show', @family_environment %> |
+<%= link_to 'Show', @family_environment %> 
 <%= link_to 'マイページ', mypage_students_path %>
