--- a/app/views/family_environments/index.html.erb
+++ b/app/views/family_environments/index.html.erb
@@ -13,7 +13,7 @@
   </thead>
 
   <tbody>
-    <% @family_environments.each do |family_environment| %>
+    <% @my_family_environments.each do |family_environment| %>
       <tr>
         <td><%= family_environment.relationship %></td>
         <td><%= family_environment.name %></td>
