--- a/app/views/family_environments/index.html.erb
+++ b/app/views/family_environments/index.html.erb
@@ -20,9 +20,8 @@
         <td><%= family_environment.birthday %></td>
         <td><%= family_environment.age %></td>
         <td><%= family_environment.family %></td>
-        <td><%= link_to 'Show', family_environment %></td>
-        <td><%= link_to 'Edit', edit_family_environment_path(family_environment) %></td>
-        <td><%= button_to 'Destroy', family_environment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', student_family_environment_path(@student.id,family_environment.id) %></td>
+        <td><%= link_to 'Edit', edit_student_family_environment_path(@student.id,family_environment.id) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New Family Environment', new_family_environment_path %>
+<%= link_to 'New Family Environment', new_student_family_environment_path %>
