--- a/app/views/emergency_contacts/index.html.erb
+++ b/app/views/emergency_contacts/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Emergency Contacts</h1>
 
 <table>
@@ -14,15 +12,15 @@
   </thead>
 
   <tbody>
-    <% @emergency_contacts.each do |emergency_contact| %>
+    <% @my_emergency_contacts.each do |emergency_contact| %>
       <tr>
         <td><%= emergency_contact.name %></td>
         <td><%= emergency_contact.relationship %></td>
         <td><%= emergency_contact.contact_address %></td>
         <td><%= emergency_contact.telephone %></td>
-        <td><%= link_to 'Show', emergency_contact %></td>
-        <td><%= link_to 'Edit', edit_emergency_contact_path(emergency_contact) %></td>
-        <td><%= button_to 'Destroy', emergency_contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <td><%= link_to 'Show', student_emergency_contact_path(@student.id,emergency_contact.id) %></td>
+        <td><%= link_to 'Edit', edit_student_emergency_contact_path(@student.id,emergency_contact.id) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Emergency Contact', new_emergency_contact_path %>
+<%= link_to 'New Emergency Contact', new_student_emergency_contact_path %>
