--- a/app/views/emergency_contacts/new.html.erb
+++ b/app/views/emergency_contacts/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', emergency_contact: @emergency_contact %>
 
-<%= link_to 'Back', emergency_contacts_path %>
+<%= link_to 'Back', student_emergency_contacts_path %>
