--- a/app/views/family_environments/_form.html.erb
+++ b/app/views/family_environments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: family_environment, local: true) do |form| %>
+<%= form_with(model: family_environment, url:choose_new_or_edit,local: true) do |form| %>
   <% if family_environment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(family_environment.errors.count, "error") %> prohibited this family_environment from being saved:</h2>
