--- a/app/views/family_environments/show.html.erb
+++ b/app/views/family_environments/show.html.erb
@@ -1,6 +1,7 @@
+<p>
   <strong>Relationship:</strong>
   <%= @family_environment.relationship %>
-
+</p>
 <p>
   <strong>Name:</strong>
   <%= @family_environment.name %>
@@ -21,5 +22,5 @@
   <%= @family_environment.family %>
 </p>
 
-<%= link_to 'Edit', edit_family_environment_path(@family_environment) %> |
+<%= link_to 'Edit', edit_student_family_environment_path(@family_environment.student.id, @family_environment.id) %> |
 <%= link_to 'マイページ', mypage_students_path %>
