--- a/app/views/emergency_contacts/_form.html.erb
+++ b/app/views/emergency_contacts/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: @emergency_contact, url:choose_new_or_edit,local: true) do |form| %>
-  <% if @emergency_contact.errors.any? %>
+<%= form_with(model: emergency_contact, url:choice_new_or_edit,local: true) do |form| %>
+  <% if emergency_contact.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@emergency_contact.errors.count, "error") %> prohibited this emergency_contact from being saved:</h2>
+      <h2><%= pluralize(emergency_contact.errors.count, "error") %> prohibited this emergency_contact from being saved:</h2>
 
       <ul>
-        <% @emergency_contact.errors.full_messages.each do |message| %>
+        <% emergency_contact.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
