new,edit画面のみ国際化

--- a/app/views/students/mypage.html.erb
+++ b/app/views/students/mypage.html.erb
@@ -1,4 +1,8 @@
 <h1>マイページ</h1>
+
+<h3>【　提出期限：６月３０日（木）　】</h3>
+<h3>期日内提出のご協力の程お願い申し上げます。</h3>
+
 <table>
   <% @students.each do |student| %>
     <tr>
