サインイン、ログイン画面にbootstrap適用

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+.notification:not(:last-child){
+  margin-bottom: 0;
+}
+.navbar-dark .navbar-nav .nav-link:hover{
+color: #FFFF00;
+}
