--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -10,7 +10,6 @@
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= form.label :student_furigana %>
     <%= form.text_field :student_furigana %>
@@ -69,6 +68,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: "button" %>
   </div>
 <% end %>
