--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -1,3 +1,105 @@
 // Place all the styles related to the students controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+// .button {
+//   display       : inline-block;
+//   border-radius : 5%;          /* 角丸       */
+//   font-size     : 12pt;        /* 文字サイズ */
+//   text-align    : center;      /* 文字位置   */
+//   cursor        : pointer;     /* カーソル   */
+//   padding       : 8px 8px;   /* 余白       */
+//   background    : #8BAD3A;     /* 背景色     */
+//   color         : #ffffff;     /* 文字色     */
+//   line-height   : 1em;         /* 1行の高さ  */
+//   transition    : .3s;         /* なめらか変化 */
+//   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+//   // border        : 2px solid #333;    /* 枠の指定 */
+// }
+// .button:hover {
+//   box-shadow    : none;        /* カーソル時の影消去 */
+//   color         : #333;     /* 背景色     */
+//   background    : #ffffff;     /* 文字色     */
+// }
+// .nav-link {
+//     color: #0062cc;
+// }
+
+//
+// @media screen and (max-width: 640px){
+//
+// }
+// * {
+//   margin:0; padding:0;
+// }
+// header {
+//   width: 100%;
+//   padding: 15px 0;
+//   margin: 0 auto;
+//   text-align: center;
+//   background-color: #D3D3D3;
+// }
+// header .headline{
+//   font-size: 32px;
+// }
+// .container{
+//   display: flex;
+//   flex-direction: column;
+//   min-height: 100vh;
+// }
+// .wrapper{
+//   margin-top: 10px;
+//   padding-bottom: 100px;
+// }
+// footer.footer{
+//   background-color: #343a40;
+//   color: #fff;
+//   text-align:center;
+// }
+// .footer04 {
+//  color: #808080;
+//  background: #e5e5e5;
+//  text-align: center;
+//  padding: 30px;
+// }
+// .footer04 a {
+//  color: #808080;
+//  text-decoration: none;
+// }
+// .footer04 a:hover {
+//  text-decoration: underline;
+// }
+// .footer04 .menu {
+//  margin: 0;
+//  padding: 0;
+//  list-style: none;
+//  display: flex;
+//  flex-wrap: wrap;
+//  justify-content: center;
+// }
+// .footer04 .menu li {
+//  margin: 0;
+//  padding: 0 20px;
+//  border-right: 1px #808080 solid;
+// }
+// .footer04 .menu li:last-child {
+//  border: none;
+// }
+// .footer04 .copyright {
+//  margin: 0;
+//  padding: 20px 0 0 0;
+// }
+//
+// @media only screen and (max-width: 599px) {
+// .footer04 .menu {
+//  justify-content: flex-start;
+// }
+// .footer04 .menu li {
+//  width: 50%;
+//  box-sizing: border-box;
+//  border: none;
+// }
+// .footer04 .menu li:nth-child(odd) {
+//  border-right: 1px #808080 solid;
+// }
+// }
