全フロントにbootstrapを導入

--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -103,3 +103,11 @@
 //  border-right: 1px #808080 solid;
 // }
 // }
+// header {
+//   width: 1000px;
+//   height: 500px;
+//   background-image: url("./1542104318.jpg");
+// }
+// footer {
+//   margin-top: auto;
+// }
