--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,9 +13,12 @@
  *= require_tree .
  *= require_self
  */
-.notification:not(:last-child){
-  margin-bottom: 0;
-}
-.navbar-dark .navbar-nav .nav-link:hover{
-color: #FFFF00;
+// .notification:not(:last-child){
+//   margin-bottom: 0;
+// }
+// .navbar-dark .navbar-nav .nav-link:hover{
+// color: #FFFF00;
+// }
+footer {
+  margin-top: auto;
 }
