--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -6,7 +6,7 @@
 //
 // height: 500px; /* 空の要素なので、高さの定義が必要です。 */
 //
-// background-image: url("./pexels-kulbir-11408206.jpg");
+// background-image: url("./1542104318.jpg");
 // background-position: center;
 // background-size: cover;
 // }
@@ -14,14 +14,4 @@
 //   display    : inline-block;
 //   position   : relative;
 //   padding    : 0
-// }
-
-// body {
-//   background-image: url("./new_haikei.jpg");
-//   background-position: center center;
-//   background-repeat: no-repeat;
-//   background-attachment: fixed;
-//   background-size: cover;
-//   background-color: #464646;
-//   z-index: 0;
 // }
