--- a/app/views/emergency_contacts/_form.html.erb
+++ b/app/views/emergency_contacts/_form.html.erb
@@ -10,28 +10,23 @@
       </ul>
     </div>
   <% end %>
+  <section class="section">
+    <div class="container">
+      <div class="columns is-centered">
+        <label for="formGroupExampleInput2" class="form-label"><%= form.label :name, "name", class: "label" %></label>
+        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :name %>
+      <div class="column is-6">
+        <label for="formGroupExampleInput2" class="form-label"><%= form.label :relationship, "relationship", class: "label" %></label>
+        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :relationship %>
+      <div class="column is-6">
+        <label for="formGroupExampleInput2" class="form-label"><%= form.label :contact_address, "contact_address", class: "label" %></label>
+        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :contact_address %>
+      <div class="column is-6">
+        <label for="formGroupExampleInput2" class="form-label"><%= form.label :telephone, "telephone", class: "label" %></label>
+        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :telephone %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :relationship %>
-    <%= form.text_field :relationship %>
-  </div>
-
-  <div class="field">
-    <%= form.label :contact_address %>
-    <%= form.text_field :contact_address %>
-  </div>
-
-  <div class="field">
-    <%= form.label :telephone %>
-    <%= form.text_field :telephone %>
-  </div>
 
   <div class="actions">
-    <%= form.submit class: "button"%>
+    <%= form.submit class: "btn btn-outline-success"%>
   </div>
 <% end %>
