--- a/app/views/emergency_contacts/show.html.erb
+++ b/app/views/emergency_contacts/show.html.erb
@@ -1,23 +1,20 @@
-<p>
-  <strong>Name:</strong>
-  <%= @emergency_contact.name %>
-</p>
-
-<p>
-  <strong>Relationship:</strong>
-  <%= @emergency_contact.relationship %>
-</p>
-
-<p>
-  <strong>Contact address:</strong>
-  <%= @emergency_contact.contact_address %>
-</p>
-
-<p>
-  <strong>Telephone:</strong>
-  <%= @emergency_contact.telephone %>
-</p>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">氏名</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @emergency_contact.name %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">続柄</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @emergency_contact.relationship %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">連絡先（勤務先名等）</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @emergency_contact.contact_address %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">電話番号</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @emergency_contact.telephone %>>
+</div>
 
 
-<%= link_to 'Edit', edit_student_emergency_contact_path(@emergency_contact.student.id, @emergency_contact.id) %> |
-<%= link_to 'マイページ', mypage_students_path %>
+<%= link_to 'Edit', edit_student_emergency_contact_path(@emergency_contact.student.id, @emergency_contact.id) ,class: "btn btn-outline-success"%> |
+<%= link_to 'マイページ', mypage_students_path ,class: "btn btn-outline-success"%>
