--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,58 +1,47 @@
+<div class="mb-3">
+  <label for="formGroupExampleInput" class="form-label">生徒名（ふりがな）</label>
+  <input type="text" class="form-control" id="formGroupExampleInput" placeholder=<%= @student.student_furigana %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">生徒名（漢字）</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.student_name %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">性別</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.sex %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">生年月日</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.birthday %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">（自宅）電話番号</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.telephone %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">（携帯）電話番号</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.cellphone %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">郵便番号</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.post_code %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">住所</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.address %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">保護者名（ふりがな）</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.parents_furigana %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">保護者名（漢字）</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.parents_name %>>
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">続柄</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.relationship %>>
+</div>
 
-<p>
-  <strong>Student furigana:</strong>
-  <%= @student.student_furigana %>
-</p>
-
-<p>
-  <strong>Student name:</strong>
-  <%= @student.student_name %>
-</p>
-
-<p>
-  <strong>Sex:</strong>
-  <%= @student.sex %>
-</p>
-
-<p>
-  <strong>Birthday:</strong>
-  <%= @student.birthday %>
-</p>
-
-<p>
-  <strong>Telephone:</strong>
-  <%= @student.telephone %>
-</p>
-
-<p>
-  <strong>Cellphone:</strong>
-  <%= @student.cellphone %>
-</p>
-
-<p>
-  <strong>Post code:</strong>
-  <%= @student.post_code %>
-</p>
-
-<p>
-  <strong>Adress:</strong>
-  <%= @student.address %>
-</p>
-
-<p>
-  <strong>Parents furigana:</strong>
-  <%= @student.parents_furigana %>
-</p>
-
-<p>
-  <strong>Parents name:</strong>
-  <%= @student.parents_name %>
-</p>
-
-<p>
-  <strong>Relationship:</strong>
-  <%= @student.relationship %>
-</p>
-
-<%= link_to 'Edit', edit_student_path(@student) %> |
-<%= link_to 'マイページ', mypage_students_path %>
+<%= link_to 'Edit', edit_student_path(@student)  ,class: "btn btn-outline-success"%>
+<%= link_to 'マイページ', mypage_students_path  ,class: "btn btn-outline-success"%>
