--- a/app/views/emergency_contacts/index.html.erb
+++ b/app/views/emergency_contacts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Emergency Contacts</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -19,8 +19,8 @@
         <td><%= emergency_contact.contact_address %></td>
         <td><%= emergency_contact.telephone %></td>
 
-        <td><%= link_to 'Show', student_emergency_contact_path(@student.id,emergency_contact.id) %></td>
-        <td><%= link_to 'Edit', edit_student_emergency_contact_path(@student.id,emergency_contact.id) %></td>
+        <td><%= link_to 'Show', student_emergency_contact_path(@student.id,emergency_contact.id) , class: "btn btn-outline-success"%></td>
+        <td><%= link_to 'Edit', edit_student_emergency_contact_path(@student.id,emergency_contact.id), class: "btn btn-outline-success" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Emergency Contact', new_student_emergency_contact_path %>
+<%= link_to 'New Emergency Contact', new_student_emergency_contact_path , class: "btn btn-outline-success"%>
