コメント機能作成

--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -4,3 +4,16 @@
     <div class="contact-text">
       <p><strong>タイトル</strong>：<%= @contact.title %></p>
     </div>
+
+    <p>コメント一覧</p>
+
+     <!-- このcomments_areaというHTMLのidを取得して、そのdivの部分だけを更新する -->
+     <div id="comments_area">
+       <!-- 投稿されたコメント一覧をブログの詳細ページに表示するためのrender -->
+       <%= render partial: 'comments/index', locals: { comments: @comments, contact: @contact } %>
+     </div>
+
+     <!-- コメント入力欄をブログの詳細ページに表示するためのrender -->
+     <%= render partial: 'comments/form', locals: { comment: @comment, contact: @contact } %>
+
+   </div>
