ログアウトのHTTPメソッドがGetになっていたため、viewのmethod:deleteを削除

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -12,7 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
+    空欄のまま、「登録」をクリックしてください。
+    <%= form.label :連絡ツール %>
     <%= form.text_field :title %>
   </div>
 
