--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -2,10 +2,13 @@
   <p id="notice"><%= notice %></p>
 
     <div class="contact-text">
-      <p><strong>タイトル</strong>：<%= @contact.title %></p>
+      <p><strong>連絡ツール</strong>：<%= @contact.title %></p>
     </div>
-
-    <p>コメント一覧</p>
+    <strong>【初回登録の場合】</strong>
+    <p>基本情報、家庭環境調査、緊急連絡先のご登録が完了しましたら、メール送信をクリックしてください。</p>
+    <strong>【登録内容変更の場合】</strong>
+    <p>お手数ですが、変更箇所を下記フォームにご入力後、メール送信をクリックしてください。</p>
+    <p>連絡内容</p>
 
      <!-- このcomments_areaというHTMLのidを取得して、そのdivの部分だけを更新する -->
      <div id="comments_area">
