--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
                 <%= link_to 'マイページ', mypage_students_path, class: 'nav-link' %>
               </li>
               <li class="nav-item active">
-                <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link ' %>
+                <%= link_to "ログアウト", destroy_user_session_path, class: 'nav-link ' %>
               </li>
           <% else %>
               <li class="nav-item active">
